# notifyhub

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 561c711604da_add_email_tasks_table.py  f4fc9deaa037_add_analytics_events_table.py  fec813ebe131_.py
src/app/: main.py
src/app/api/v1/: dlq.py  events.py  otp.py  promo.py  reports.py  tasks.py  topic.py
src/app/api/v1/notifications/: email.py
src/app/core/: database.py  logging.py  middleware.py  redis_client.py  settings.py
src/app/models/: __init__.py  analytics_event.py  base.py  email_task.py  failed_task.py
src/app/schemas/: email_task.py  failed_task.py  topic.py
src/app/services/: __init__.py  email_client.py
src/app/tasks/: __init__.py  broadcast.py  celery_app.py  dlq.py  email.py  reports.py  topic.py
