[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.14"
celery = "^5.6.3"
kombu = "^5.6.2"
gevent = "^26.4.0"
fastapi = "^0.136.1"
pydantic-settings = "^2.14.1"
uvicorn = {extras = ["standard"], version = "^0.47.0"}
flower = "^2.0.1"
structlog = "^25.5.0"
redis = "^7.4.0"
rich = "^15.0.0"
sqlalchemy = "^2.0.49"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.12"
pydantic = "^2.13.4"


